--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <li><a href="#events">카페</a></li>
           <li><a href="#chefs">디저트</a></li>
           <li><a href="#gallery">추천</a></li>
+        </ul>
       </nav><!-- .navbar -->
 
       <a class="btn-book-a-table" href="#book-a-table">Book a Table</a>
@@ -289,239 +290,46 @@
       </div>
     </section>
 
-     <section id="cafe" class="cafe">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-             <p> <span>cafe</span> recommend</p>
-
-        </div>
-
-        <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="200">
-
-          <li id="cafe1" class="nav-item">
-            <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#cafe-manolin">
-              <h4>마놀린</h4>
-            </a>
-          </li><!-- End tab nav item -->
-
-          <li id="cafe2" class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#cafe-chico">
-              <h4>치코커피</h4>
-            </a><!-- End tab nav item -->
-
-          <li id="cafe3" class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#cafe-deview">
-              <h4>드뷰</h4>
-            </a>
-          </li><!-- End tab nav item -->
-
-          <li id="cafe4" class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#cafe-mrbean">
-              <h4>미스터빈커피</h4>
-            </a>
-          </li><!-- End tab nav item -->
-
-        </ul>
-
-        <div class="tab-content" data-aos="fade-up" data-aos-delay="300">
-
-          <div class="tab-pane fade active show" id="cafe-manolin">
-
-            <div class="tab-header text-center">
-              <h3>마놀린</h3>
-            </div>
-
-            <div class="row gy-4">
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                  <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12643.521756491115!2d127.0419413!3d37.6049728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4a6627dbd0f39ce5!2z7Lm07Y6YIOuniOuGgOumsA!5e0!3m2!1sko!2skr!4v1672064639897!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
-              </div>
-
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                <div class="content ps-0 ps-lg-5">
-                  <p class="fst-italic">
-                    <i class="bi bi-caret-right-fill"></i>
-                     추천메뉴: 소고기쌀국수, 매운 소고기쌀국수, 새우볶음밥, 텃만꿍
-                  </p>
-                  <p class="fst-italic">
-                     사장님표 커피가 정말 맛있다고 합니다. <br>
-                     저는 커피를 못 마셔서 카페인이 안 들어간 음료를 주로 마시는데, <br>
-                     아이스티가 정말 맛있습니다! <br>
-                     립톤이나 네스티 
-                  </p>
-                  <p>
-                    <i class="bi bi-check2-all text-danger"></i> 휴무일: 없음 <br>
-                    <i class="bi bi-check2-all text-danger"></i> 운영시간: 월-목 8:30-21:00, 금 9:00-18:30 토,일 9:00-18:30<br>
-                    <i class="bi bi-check2-all text-danger"></i> 전화번호: 02-919-7904
-                  </p>
-                  <p>
-                   주소: 서울 성북구 화랑로13길 38
-                  </p>
-                </div>
-
-              </div>
-
-            </div>
-          </div><!-- End first restaurant Content -->
-
-          <div class="tab-pane fade" id="menu-breakfast">
-
-            <div class="tab-header text-center">
-              <p>일식</p>
-              <h3>백소정</h3>
-            </div>
-
-            <div class="row gy-4">
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                  <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.9709893792487!2d127.03908011531263!3d37.602841779791156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb61c0d42e13%3A0x336350c6d54f950c!2z67Cx7IaM7KCVIO2VmOyblOqzoeygkA!5e0!3m2!1sko!2skr!4v1671980597869!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
-              </div>
-
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                <div class="content ps-0 ps-lg-5">
-                  <p class="fst-italic">
-                    <i class="bi bi-caret-right-fill"></i>
-                     추천메뉴: 치즈돈까스, 마제소바 에비텐 세트
-                  </p>
-                  <p class="fst-italic">
-                     매장이 넓고 깔끔해서 친구들이랑 가기 좋아요. <br>
-                     티오더 결제 시스템이 있어 식탁에서 편하게 주문할 수 있어요.<br>
-                     마제소바 먹고 밥 달라고 부탁드려서 남은 소스에 밥 비벼먹으면 정말 맛있습니다.
-                     새우튀김도 정말 맛있어요. <br>
-                     리뷰쓰면 음료수를 주는 이벤트를 하고 있어요!
-
-                  </p>
-                  <p>
-                    <i class="bi bi-check2-all text-danger"></i> 휴무일: 매주 월요일 <br>
-                    <i class="bi bi-check2-all text-danger"></i> 운영시간: 화-일 11:00-21:00<br>
-                    <i class="bi bi-check2-all text-danger"></i> 브레이크타임: 15:00-17:00<br>
-                    <i class="bi bi-check2-all text-danger"></i> 라스트오더: 20:00<br>
-                    <i class="bi bi-check2-all text-danger"></i> 전화번호: 0507-1365-3437
-                  </p>
-                  <p>
-                   주소: 서울특별시 성북구 화랑로11길 11-3
-                  </p>
-                </div>
-
-              </div>
-
-            </div>
-          </div><!-- End second restaurant Content -->
-
-          <div class="tab-pane fade" id="menu-lunch">
-
-            <div class="tab-header text-center">
-              <p>양식</p>
-              <h3>스페셜리</h3>
-            </div>
-
-            <div class="row gy-4">
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                  <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.8130413666454!2d127.042717415142!3d37.60655887979046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb24acd12c53%3A0x5eb46500cfac589e!2z7Iqk7Y6Y7IWc66asIHNwZWNpYWwgbGVl!5e0!3m2!1sko!2skr!4v1671983506334!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
-              </div>
-
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                <div class="content ps-0 ps-lg-5">
-                  <p class="fst-italic">
-                    <i class="bi bi-caret-right-fill"></i>
-                     추천메뉴: 모짜렐라 바질 토마토 파스타, 게살 새우살 로제 리조또, 콤비네이션 피자
-                  </p>
-                  <p class="fst-italic">
-                     매장은 작지만 깔끔하고 분위기도 좋아요. <br>
-                     오픈형 주방이라 사장님이 요리하시는 모습을 볼 수 있어요. <br>
-                     사장님이 친절하시고 신선한 재료 사용하시는 것 같아요. <br>
-                     스파게티, 리조또 맛있고 여러명이서 가면 피자 시켜 드세요!<br>
-                     상월곡 역쪽에서 친구를 만난다면 꼭 가보세요~ <br>
-
-                  </p>
-                  <p>
-                    <i class="bi bi-check2-all text-danger"></i> 휴무일: 매주 일요일 <br>
-                    <i class="bi bi-check2-all text-danger"></i> 운영시간: 월-토 11:00-21:30<br>
-                    <i class="bi bi-check2-all text-danger"></i> 브레이크타임: 15:00-17:00<br>
-                    <i class="bi bi-check2-all text-danger"></i> 전화번호: 070-7576-1079
-                  </p>
-                  <p>
-                   주소: 서울 성북구 장월로1길 28 동아에코빌아파트 상가동 2층
-                  </p>
-                </div>
-
-              </div>
-
-            </div>
-          </div><!-- End third restaurant Content -->
-
-          <div class="tab-pane fade" id="menu-dinner">
-
-            <div class="tab-header text-center">
-              <p>돼지고기구이</p>
-              <h3>공복</h3>
-            </div>
-
-            <div class="row gy-4">
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                  <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.8408917657116!2d127.04257051514205!3d37.60590347979065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb821a40a717%3A0x5c1c68611f56b48d!2z6rO167O1!5e0!3m2!1sko!2skr!4v1671985900938!5m2!1sko!2skr"  frameborder="0" allowfullscreen></iframe>
-              </div>
-
-              <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
-                <div class="content ps-0 ps-lg-5">
-                  <p class="fst-italic">
-                    <i class="bi bi-caret-right-fill"></i>
-                     추천메뉴: 생갈비, 목살, 토장찌개
-                  </p>
-                  <p class="fst-italic">
-                     사장님과 알바생들이 직접 고기를 구워주고 잘라주십니다. <br>
-                     사장님 친절하시고 고기가 냄새 안나고 정말 맛있어요 <br>
-                     밑반찬들도 다 맛있는데 갓김치가 정말 맛있어요. <br>
-                     단호박과 꽈리고추도 구워주시는데 구운 꽈리고추랑 고기랑 정말 잘 어울립니다!  <br>
-                     고기 먹다가 느끼해지면 중간중간 토장찌개로 기름을 싹 내려주면 돼요. <br>
-
-                  </p>
-                  <p>
-                    <i class="bi bi-check2-all text-danger"></i> 휴무일: 매주 일요일 <br>
-                    <i class="bi bi-check2-all text-danger"></i> 운영시간: 월-토 17:00-22:30<br>
-                    <i class="bi bi-check2-all text-danger"></i> 라스트오더: 21:30 <br>
-                    <i class="bi bi-check2-all text-danger"></i> 전화번호: 02-914-6692
-                  </p>
-                  <p>
-                   주소: 서울 성북구 장월로1길 60 1층
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div><!-- End fourth restaurant Content -->
-        </div>
-      </div>
-    </section>
-
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Testimonials</h2>
-          <p>What Are They <span>Saying About Us</span></p>
+          <h2>카페</h2>
+          <p>cafe <span>recommendation</span></p>
         </div>
 
-        <div class="slides-1 swiper" data-aos="fade-up" data-aos-delay="100">
+        <div class="slides-1 swiper" data-aos="fade-up" data-aos-delay="900">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
-                  <div class="col-lg-6">
+                  <div class="col-lg-5">
                     <div class="testimonial-content">
                       <p>
+                        <h3>마놀린</h3>
+                      </p>
+                      <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                          사장님표 커피가 정말 맛있다고 합니다. <br>
+                          저는 커피를 못 마셔서 카페인이 안 들어간 음료를 주로 마시는데, <br>
+                          아이스티가 정말 맛있습니다! <br>
+                          립톤이나 네스티같은 아이스티가 아니라 정말 티를 우려서 타주셔서 추천합니다.
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>Sara Wilsson</h3>
-                      <h4>Designer</h4>
-                      <div class="stars">
-                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                      </div>
+
+                      <p>
+                        <h4>
+                          주소: 서울 성북구 화랑로13길 79-2 <br>
+                          휴무일: 없음 <br>
+                          운영시간: 월-목 8:30-21:00, 금-일 9:00-18:30<br>
+                          전화번호: 02-919-7904
+                        </h4>
+                      </p>
                     </div>
                   </div>
-                  <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-2.jpg" class="img-fluid testimonial-img" alt="">
+                  <div class="col-lg-5 d-flex align-items-start" data-aos="fade-up" data-aos-delay="900">
+                      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12643.521756491115!2d127.0419413!3d37.6049728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4a6627dbd0f39ce5!2z7Lm07Y6YIOuniOuGgOumsA!5e0!3m2!1sko!2skr!4v1672064639897!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
                   </div>
                 </div>
               </div>
@@ -531,51 +339,105 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
-                  <div class="col-lg-6">
+                  <div class="col-lg-5">
                     <div class="testimonial-content">
                       <p>
+                        <h3>치코커피</h3>
+                      </p>
+                      <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                           매장이 정말 깔끔하고 예뻐요! <br>
+                           상하목장 아이스크림이 파는데 정말 맛있어요 <br>
+                           크로플도 정말 맛있는데 위에 아이스크림도 올려주시고 가격도 괜찮아요. <br>
+                           계절 메뉴이기는 하지만 딸기 라떼도 정말 맛있고 딸기도 많이 들어있어요. <br>
+                           사장님 강아지도 만날 수 있어요.
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>Jena Karlis</h3>
-                      <h4>Store Owner</h4>
-                      <div class="stars">
-                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                      </div>
+
+                      <p>
+                        <h4>
+                          주소: 서울 성북구 장월로1라길 13 2층 치코커피
+                          휴무일: 없음 <br>
+                          운영시간: 화-금 10:00-22:00 토-월 12:00-22:00<br>
+                          전화번호: 0507-1348-7592
+                        </h4>
+                      </p>
                     </div>
                   </div>
-                  <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-3.jpg" class="img-fluid testimonial-img" alt="">
+                  <div class="col-lg-5 d-flex align-items-start" data-aos="fade-up" data-aos-delay="900">
+                      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.8705264477926!2d127.040967115142!3d37.60520607979058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbbe40ad35f75%3A0xe5914df8a9a03b0d!2z7LmY7L2U7Luk7ZS8!5e0!3m2!1sko!2skr!4v1672066874852!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
                   </div>
                 </div>
               </div>
             </div><!-- End testimonial item -->
+
 
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
-                  <div class="col-lg-6">
+                  <div class="col-lg-5">
                     <div class="testimonial-content">
                       <p>
+                        <h3>드뷰</h3>
+                      </p>
+                      <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                          매장 넓고 깨끗해요. <br>
+                          몇몇 자리는 테이블이랑 의자랑 높이가 같아서 불편할 수도 있어요. <br>
+                          플레이팅 예쁘게 해주시고 맛있어요. <br>
+                          크로플 폭신하고 달고 맛있어요! <br>
+                          월곡에서 감성카페를 원하시면 가보시는 걸 추천합니다.
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>John Larson</h3>
-                      <h4>Entrepreneur</h4>
-                      <div class="stars">
-                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                      </div>
+
+                      <p>
+                        <h4>
+                          주소: 서울 성북구 화랑로13길 79-2
+                          휴무일: 없음. <br>
+                          운영시간: 일-목 09:00-22:00 금-토 09:00-23:00 <br>
+                          전화번호: 0507-1479-8937
+                        </h4>
+                      </p>
                     </div>
                   </div>
-                  <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-4.jpg" class="img-fluid testimonial-img" alt="">
+                  <div class="col-lg-5 d-flex align-items-start" data-aos="fade-up" data-aos-delay="900">
+                      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.8094336176223!2d127.0385606151421!3d37.60664377979037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbbbf49a2c129%3A0x818f80f225b86fb2!2z65Oc67ew!5e0!3m2!1sko!2skr!4v1672068521195!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
                   </div>
                 </div>
               </div>
             </div><!-- End testimonial item -->
-
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <div class="row gy-4 justify-content-center">
+                  <div class="col-lg-5">
+                    <div class="testimonial-content">
+                      <p>
+                        <h3>미스터빈</h3>
+                      </p>
+                      <p>
+                        <i class="bi bi-quote quote-icon-left"></i>
+                          사장님 정말 친절하세요. <br>
+                          음료 맛있고 디저트 먹고 싶으면 와플 먹는 것도 추천합니다. <br>
+                          자리 불편하지 않고 좌식 자리도 있어요! <br>
+                          따뜻한 분위기의 카페를 찾으신다면 추천합니다~
+                        <i class="bi bi-quote quote-icon-right"></i>
+                      </p>
+                      <p>
+                        <h4>
+                          주소: 서울 성북구 화랑로 103<br>
+                          휴무일: 매주 토요일, 일요일 <br>
+                          운영시간: 월-금 10:30-23:00<br>
+                          전화번호: 010-2813-5894
+                        </h4>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="col-lg-5 d-flex align-items-start" data-aos="fade-up" data-aos-delay="900">
+                      <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.939400188313!2d127.03842792672454!3d37.603585215152265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbbaced772155%3A0x4cd13ad33ea16698!2z66-47Iqk7YSw67mI7Luk7ZS8!5e0!3m2!1sko!2skr!4v1672069221854!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
           </div>
           <div class="swiper-pagination"></div>
         </div>
